# hmm-simulator

./: LICENSE  README.md  generate.py  hmm_generator.py  main.py  plotting.py  probas.py  pyproject.toml  sojourn.py  sojourn_time.py  sparsify.py  synthetic_data.ipynb  transition.py  utils.py
examples/: basic_usage.ipynb
src/hmm_simulator/: hmm_generator.py  plotting.py  sojourn.py  sparsify.py  transition.py  utils.py
tests/: test_hmm_generator.py  test_sojourn.py  test_sparsify.py  test_transition.py  test_utils.py
