[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hmm-simulator"
version = "0.1.0"
description = "A Python implementation of HMM ... algorithm"
authors = [{ name="Severin Elvatun" }]
license = "MIT"
readme = "README.md"
dependencies = ["numpy", "scipy"]
