[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hmm-simulator"
version = "0.1.0"
description = "A Python implementation of HMM ... algorithm"
authors = [{ name="Severin Elvatun" }]
license = "MIT"
readme = "README.md"
dependencies = ["numpy", "scipy", "matplotlib", "tqdm"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest"]
